--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -199,7 +199,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/programmer.jpg") top center;
+  background: url("../img/fundo-preto-antigo-textura-do-grunge-papel-de-parede-escuro-quadro-negro-quadro-negro-parede-da-sala.jpg") top center;
   background-size: cover;
 }
 #hero:before {
